Admin view shelter, ban shelter, view animals, view adoptiions, view sponsorships. Some bugs fixed

--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,10 @@
           <version>0.0.8</version>
           <configuration>
             <mainClass>AnimalCareCentre.App</mainClass>
+            <options>
+                <!-- just a bug fix for macOS -->
+                <option>-Djavafx.disableAccessibility=true</option>
+            </options>
           </configuration>
       </plugin>
 
