--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,13 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
+    <dependency>
+        <groupId>org.openjfx</groupId>
+        <artifactId>javafx-controls</artifactId>
+        <version>21</version>
+    </dependency>
+
+
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
@@ -68,6 +75,20 @@
 
 	<build>
 		<plugins>
+      <plugin>
+        <groupId>org.openjfx</groupId>
+          <artifactId>javafx-maven-plugin</artifactId>
+          <version>0.0.8</version>
+          <configuration>
+            <mainClass>AnimalCareCentre.App</mainClass>
+            <options>
+                <!-- just a bug fix for macOS -->
+                <option>-Djavafx.disableAccessibility=true</option>
+            </options>
+          </configuration>
+      </plugin>
+
+
       <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
