--- a/pom.xml
+++ b/pom.xml
@@ -30,15 +30,14 @@
 		<java.version>21</java.version>
 	</properties>
 	<dependencies>
+    <dependency>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-validation</artifactId>
+      </dependency>
        <dependency>
           <groupId>org.mariadb.jdbc</groupId>
           <artifactId>mariadb-java-client</artifactId>
           <version>3.4.0</version>
-      </dependency>
-      <dependency>
-        <groupId>commons-validator</groupId>
-        <artifactId>commons-validator</artifactId>
-        <version>1.10.0</version>
       </dependency>
       <dependency>
         <groupId>org.passay</groupId>
