--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,6 @@
 spring.application.name=AnimalCareCentrenimalCareCentre
 spring.application.name=AnimalCareCentre
-spring.datasource.url=jdbc:mysql://localhost:3306/animalcarecentre
-api?createDatabaseIfNotExist=true&useSSL=false&allowPubli
-cKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/animalcarecentreapi?createDatabaseIfNotExist=true&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
